started design of job list

--- a/app/src/main/res/layout/activity_job_listing.xml
+++ b/app/src/main/res/layout/activity_job_listing.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{jobsResource.message}"
-            android:textColor="@color/grey_1d"
+            android:textColor="@color/text_primary"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_medium"
             android:text="@{jobsResource.message}"
-            android:textColor="@color/grey_1d"
+            android:textColor="@color/text_primary"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintHorizontal_bias="0.5"
@@ -60,7 +60,7 @@
             android:onClick="@{() -> interactions.retry()}"
             android:padding="4dp"
             android:text="@string/touch_to_retry"
-            android:textColor="@color/grey_24"
+            android:textColor="@color/text_secondary"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
