--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#F44336</color>
+    <color name="colorPrimaryDark">#D32F2F</color>
+    <color name="colorAccent">#448AFF</color>
 
-    <color name="grey_1d">#1D1D1D</color>
-    <color name="grey_24">#242424</color>
+    <color name="text_primary">#212121</color>
+    <color name="text_secondary">#757575</color>
 
     <color name="background">#ECECEC</color>
+
+    <color name="white">#FFFFFF</color>
 </resources>
