--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="background">#ECECEC</color>
 
     <color name="white">#FFFFFF</color>
+
+    <color name="error_toast_background">#C21818</color>
 </resources>
